# Atomix

./: .gitignore  COMMAND.md  README.md  docker-compose.yml  recon-engine.Dockerfile
backend/: README.md  db.sqlite3  pyproject.toml
backend/api/: urls.py  views.py
backend/config/: settings.py  urls.py
backend/config/db/: mongo.py
backend/config/profiles/: loader.py
backend/health/: views.py
backend/profiles/: default.yaml
backend/scans/: apps.py  findings.py  profiles.py  repository.py  results.py  summary.py
backend/scans/executor/: docker_runner.py  runner.py
backend/scans/generators/: nikto.py  whatweb.py
backend/scans/schemas/: findings.py  summary.py
backend/scans/utils/: output.py
profiles/: default.yaml
wordlists/: api.txt  common.txt
